fixed subject overflow in single scenario view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1307,6 +1307,7 @@ textarea#description {
 .subject-labels {
     margin-right: 2px;
     font-weight: normal;
+    display: inline-block;
 }
 
 .only-print-title {
